# Jarvis

./: .gitignore  README.md  pyproject.toml
data/: notes.txt
src/: main.py
src/audio/: __init__.py  recorder.py  speaker.py
src/core/: __init__.py  agents.py  engine.py  rag.py
src/tools/: __init__.py  file_ops.py  search.py
src/ui/: __init__.py  animations.py  interface.py
